--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+
+ol {
+    margin-left: -40px;
+    margin-top: -20px;
+    list-style-position: inside;
+}
 .red-text {
     color: orange;
 }
 .note {
 
-font-size: 100px; font-family: Arial, Helvetica, sans-serif;color: blue;
+font-size: 40px; font-family: Arial, Helvetica, sans-serif;color: blue;
 }
