--- a/style.css
+++ b/style.css
@@ -14,3 +14,7 @@ font-size: 40px; font-family: Arial, Helvetica, sans-serif;color: blue;
 * {
     background-color: brown;
 }
+#red {
+    color: red;
+
+}
