--- a/style.css
+++ b/style.css
@@ -18,3 +18,8 @@ font-size: 40px; font-family: Arial, Helvetica, sans-serif;color: blue;
     color: red;
 
 }
+
+img {
+    height: 200px;
+    width: 200px;
+}
